Atualizações e refatoração na melhoria do codigo e visual.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/fineasy-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fineasy - Controle Financeiro Inteligente</title>
     <meta name="description" content="Gerencie suas finanças de forma simples e inteligente com o Fineasy. Controle receitas, despesas e alcance seus objetivos financeiros." />
-    <meta name="author" content="Fineasy" />
+    <meta name="author" content="Gabriel Ramos" />
+    <meta name="keywords" content="finanças, controle financeiro, receitas, despesas, orçamento, economia" />
 
     <meta property="og:title" content="Fineasy - Controle Financeiro Inteligente" />
-    <meta property="og:description" content="Gerencie suas finanças de forma simples e inteligente com o Fineasy" />
+    <meta property="og:description" content="Gerencie suas finanças de forma simples e inteligente com o Fineasy. Desenvolvido por Gabriel Ramos." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://github.com/GabrielRww/ADS_Gabriel_Ramos_FrontEnd_FinEasy" />
+    <meta property="og:image" content="/fineasy-logo.png" />
+    <meta property="og:image:alt" content="Logo do Fineasy - Controle Financeiro" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Fineasy - Controle Financeiro Inteligente" />
+    <meta name="twitter:description" content="Sistema completo de controle financeiro desenvolvido por Gabriel Ramos" />
+    <meta name="twitter:image" content="/fineasy-logo.png" />
+    <meta name="twitter:creator" content="@GabrielRww" />
   </head>
 
   <body>
